tests/fail/unsafe_cast_escape.stderr
error[E0450]: Invalid cast: cannot convert 'Addr' to '&Data' via 'as'; only 'Addr' and '*' conversions are supported
 --> tests/fail/unsafe_cast_escape.tk:9:37
   |
 9 |         return (*raw_b as Addr) as &Data
   |                                     ^
error[E0454]: Returning reference to parameter 'b' requires explicit dependency declaration (<- b)
 --> tests/fail/unsafe_cast_escape.tk:9:9
   |
 9 |         return (*raw_b as Addr) as &Data
   |         ^
error[E0450]: Invalid cast: cannot convert 'Addr' to '&Data' via 'as'; only 'Addr' and '*' conversions are supported
 --> tests/fail/unsafe_cast_escape.tk:18:35
    |
 18 |         return (*raw as Addr) as &Data
    |                                   ^
error[E0455]: Returning reference to local variable 'untraced unsafe cast' is unsafe
 --> tests/fail/unsafe_cast_escape.tk:18:9
    |
 18 |         return (*raw as Addr) as &Data
    |         ^
